<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator Enhanced</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pre_tax_bill_">Pre-Tax Bill:</string>
    <string name="customer">Customer</string>
    <string name="_0_00">$0.00</string>
    <string name="_15_">15%</string>
    <string name="todo">TODO</string>
    <string name="tip_">Tip:</string>
    <string name="split_bill_">Split Bill:</string>
    <string name="reset">Reset</string>
    <string name="grand_total_">Grand Total:</string>
    <string name="tax_">Tax:</string>

</resources>
